automatically running rds-server for DOs in the distributed setting

--- a/notebooks/federated-analytics-diabetes/distributed/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/distributed/do2.ipynb
@@ -25,12 +25,7 @@
     "\n",
     "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
     "\n",
-    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">\n",
-    "\n",
-    "Run the `syft-rds` server in a terminal with:\n",
-    "```bash\n",
-    "uv run syft-rds server\n",
-    "```"
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">"
    ]
   },
   {
@@ -59,7 +54,7 @@
     "\n",
     "do2_email = Client.load().email\n",
     "logger.info(f\"DO2 email: {do2_email}\")\n",
-    "do2 = sy.init_session(host=do2_email)"
+    "do2 = sy.init_session(host=do2_email, start_rds_server=True)"
    ]
   },
   {
