--- a/notebooks/fedrag/distributed/do1.ipynb
+++ b/notebooks/fedrag/distributed/do1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Outline of what DO1 will do\n",
     "\n",
-    "0. Run the `syftbox client` in a terminal (or the SyftBox UI app), and the `syft-rds server`\n",
+    "0. Run the `syftbox client` in a terminal (or the SyftBox UI app)\n",
     "1. DO logs into the datasite as an admin and creates a Syft dataset \n",
     "2. DO reviews and run jobs submitted by data scientists on DO's private data"
    ]
@@ -17,19 +17,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app\n",
     "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
     "\n",
     "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
     "\n",
-    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
+    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder\n",
     "\n",
-    "<img src=\"../images/SyftBoxNetwork.png\" width=\"21%\" alt=\"SyftBox network\">\n",
-    "\n",
-    "Run the `syft-rds` server in a terminal with:\n",
-    "```bash\n",
-    "uv run syft-rds server\n",
-    "```"
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"21%\" alt=\"SyftBox network\">"
    ]
   },
   {
@@ -58,7 +53,7 @@
     "\n",
     "do1_email = Client.load().email\n",
     "logger.info(f\"DO1 email: {do1_email}\")\n",
-    "do1 = sy.init_session(host=do1_email)\n",
+    "do1 = sy.init_session(host=do1_email, start_rds_server=True)\n",
     "\n",
     "logger.info(f\"{do1.is_admin = }\")"
    ]
