--- a/notebooks/fedrag/distributed/do2.ipynb
+++ b/notebooks/fedrag/distributed/do2.ipynb
@@ -17,19 +17,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app\n",
     "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
     "\n",
     "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
     "\n",
-    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
+    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder\n",
     "\n",
-    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">\n",
-    "\n",
-    "Run the `syft-rds` server in a terminal with:\n",
-    "```bash\n",
-    "uv run syft-rds server\n",
-    "```"
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">"
    ]
   },
   {
@@ -58,7 +53,7 @@
     "\n",
     "do2_email = Client.load().email\n",
     "logger.info(f\"DO2 email: {do2_email}\")\n",
-    "do2 = sy.init_session(host=do2_email)\n",
+    "do2 = sy.init_session(host=do2_email, start_rds_server=True)\n",
     "\n",
     "logger.info(f\"{do2.is_admin = }\")"
    ]
