--- a/notebooks/fedrag/distributed/ds.ipynb
+++ b/notebooks/fedrag/distributed/ds.ipynb
@@ -112,13 +112,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "mock_paths = []\n",
     "\n",
@@ -153,6 +146,18 @@
    "source": [
     "try:\n",
     "    statpearls.get_private_path()\n",
+    "except Exception as e:\n",
+    "    logger.error(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    textbooks.get_private_path()\n",
     "except Exception as e:\n",
     "    logger.error(e)"
    ]
@@ -334,13 +339,6 @@
     "\n",
     "<img src=\"../images/dsSubmitsJobs.png\" width=\"50%\" alt=\"DS submits jobs\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
