update syft-flwr to 0.2.2 with syft-rds==0.2.2

--- a/notebooks/fedrag/local/ds.ipynb
+++ b/notebooks/fedrag/local/ds.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = False"
+    "RUN_SIMULATION = True"
    ]
   },
   {
