fix typos. clean ups

--- a/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
@@ -40,7 +40,7 @@
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
     "\n",
-    "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
+    "DS will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
     "\n",
     "<img src=\"../images/dsLogsInAsGuests.png\" width=\"53%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
@@ -231,7 +231,7 @@
     "]\n",
     "aggregator = \"ds@openmined.org\"\n",
     "```\n",
-    "and creates the `main.py` to specifies who runs what based on the new metatdata information"
+    "and creates the `main.py` to specifies who runs what based on the new metadata information"
    ]
   },
   {
