--- a/notebooks/federated-analytics-diabetes/local/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/ds.ipynb
@@ -25,7 +25,7 @@
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
     "\n",
-    "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
+    "DS will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
     "\n",
     "<img src=\"../images/dsLogsInAsGuests.png\" width=\"55%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
@@ -434,9 +434,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Clean things up\n",
+    "!rm {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} {str(SYFT_FLWR_PROJECT_PATH / \"**/__pycache__\")}\n",
+    "!rm -rf figures/ local_syftbox_network/ .syftbox/ .server"
+   ]
   }
  ],
  "metadata": {
