--- a/notebooks/fedrag/distributed/ds.ipynb
+++ b/notebooks/fedrag/distributed/ds.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "# Set some constants and variables\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
-    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
+    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"120\"\n",
     "\n",
     "do_clients = [do1_guest, do2_guest]\n",
     "do_emails = [DO1, DO2]"
@@ -215,7 +215,7 @@
     "]\n",
     "aggregator = \"ds@openmined.org\"\n",
     "```\n",
-    "and creates the `main.py` to specifies who runs what based on the new metatdata information"
+    "and creates the `main.py` to specifies who runs what based on the new metadata information"
    ]
   },
   {
