--- a/notebooks/fedrag/local/ds.ipynb
+++ b/notebooks/fedrag/local/ds.ipynb
@@ -171,7 +171,7 @@
     "]\n",
     "aggregator = \"ds@openmined.org\"\n",
     "```\n",
-    "and creates the `main.py` to specifies who runs what based on the new metatdata information"
+    "and creates the `main.py` to specifies who runs what based on the new metadata information"
    ]
   },
   {
@@ -381,20 +381,14 @@
    "outputs": [],
    "source": [
     "# Clean up\n",
-    "!rm -rf .server .syftbox local_syftbox_network"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. DS Observes the Results"
+    "!rm -rf {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} {str(SYFT_FLWR_PROJECT_PATH / \"**/__pycache__\")}\n",
+    "!rm -rf weights/ local_syftbox_network/ .syftbox/ .server"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fedrag",
+   "display_name": "syft-flwr",
    "language": "python",
    "name": "python3"
   },
