--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -229,7 +229,7 @@
     "]\n",
     "aggregator = \"ds@openmined.org\"\n",
     "```\n",
-    "and creates the `main.py` to specifies who runs what based on the new metatdata information\n",
+    "and creates the `main.py` to specifies who runs what based on the new metadata information\n",
     "\n",
     "\n",
     "<img src=\"../images/dsBootstrapping.png\" width=\"50%\" alt=\"Your second image description\">\n"
@@ -417,14 +417,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# clean things up\n",
+    "!rm -rf {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} {str(SYFT_FLWR_PROJECT_PATH / \"**/__pycache__\")}\n",
+    "!rm -rf weights/ local_syftbox_network/ .syftbox/ .server"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "fl-diabetes-prediction-workspace",
    "language": "python",
    "name": "python3"
   },
