--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -40,7 +40,7 @@
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
     "\n",
-    "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
+    "DS will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
     "\n",
     "<img src=\"../images/dsLogsInAsGuests.png\" width=\"53%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
@@ -58,8 +58,8 @@
     "DS = Client.load().email\n",
     "logger.info(f\"DS's email: {DS}\")\n",
     "\n",
-    "DO1 = \"flower-test-group-1@openmined.org\"\n",
-    "DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "DO1 = \"<do1_email>\"\n",
+    "DO2 = \"<do2_email>\"\n",
     "do1_guest = sy.init_session(host=DO1)\n",
     "do2_guest = sy.init_session(host=DO2)"
    ]
@@ -236,7 +236,7 @@
     "]\n",
     "aggregator = \"ds@openmined.org\"\n",
     "```\n",
-    "and creates the `main.py` to specifies who runs what based on the new metatdata information\n",
+    "and creates the `main.py` to specifies who runs what based on the new metadata information\n",
     "\n",
     "\n",
     "<img src=\"../images/dsBootstrapping.png\" width=\"50%\" alt=\"Your second image description\">\n"
@@ -431,7 +431,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "fl-diabetes-prediction-workspace",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
