--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -205,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "fl-diabetes-prediction-workspace",
    "language": "python",
    "name": "python3"
   },
