integrating with syft-rds 0.3.0 (syft-event 0.4.0)

--- a/notebooks/federated-analytics-diabetes/local/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/ds.ipynb
@@ -79,20 +79,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import syft_event\n",
-    "\n",
-    "import syft_flwr\n",
-    "\n",
-    "print(syft_event.__version__)\n",
-    "print(syft_flwr.__version__)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -440,14 +426,21 @@
    "outputs": [],
    "source": [
     "# Clean things up\n",
-    "!rm {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} {str(SYFT_FLWR_PROJECT_PATH / \"**/__pycache__\")}\n",
+    "!rm -rf {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} {str(SYFT_FLWR_PROJECT_PATH / \"**/__pycache__\")}\n",
     "!rm -rf figures/ local_syftbox_network/ .syftbox/ .server"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "federated-analytics-diabetes",
    "language": "python",
    "name": "python3"
   },
