--- a/notebooks/federated-analytics-diabetes/local/do1.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/do1.ipynb
@@ -206,13 +206,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "federated-analytics-diabetes",
    "language": "python",
    "name": "python3"
   },
