--- a/notebooks/federated-analytics-diabetes/local/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/do2.ipynb
@@ -205,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "federated-analytics-diabetes",
    "language": "python",
    "name": "python3"
   },
