update notebooks usecase uv lock files

--- a/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
@@ -58,8 +58,8 @@
     "DS = Client.load().email\n",
     "logger.info(f\"DS's email: {DS}\")\n",
     "\n",
-    "DO1 = \"flower-test-group-1@openmined.org\"\n",
-    "DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "DO1 = \"<do1_email>\"\n",
+    "DO2 = \"<do2_email>\"\n",
     "do1_guest = sy.init_session(host=DO1)\n",
     "do2_guest = sy.init_session(host=DO2)"
    ]
@@ -433,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "federated-analytics-diabetes",
    "language": "python",
    "name": "python3"
   },
