--- a/notebooks/fedrag/distributed/ds.ipynb
+++ b/notebooks/fedrag/distributed/ds.ipynb
@@ -58,8 +58,8 @@
     "DS = Client.load().email\n",
     "logger.info(f\"DS's email: {DS}\")\n",
     "\n",
-    "DO1 = \"dkn.work@protonmail.com\"\n",
-    "DO2 = \"dknguyen.work@gmail.com\"\n",
+    "DO1 = \"<do1_email>\"\n",
+    "DO2 = \"<do2_email>\"\n",
     "do1_guest = sy.init_session(host=DO1)\n",
     "do2_guest = sy.init_session(host=DO2)"
    ]
