--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -58,8 +58,8 @@
     "DS = Client.load().email\n",
     "logger.info(f\"DS's email: {DS}\")\n",
     "\n",
-    "DO1 = \"<do1_email>\"\n",
-    "DO2 = \"<do2_email>\"\n",
+    "DO1 = \"dkn.work@protonmail.com\"\n",
+    "DO2 = \"dknguyen.work@gmail.com\"\n",
     "do1_guest = sy.init_session(host=DO1)\n",
     "do2_guest = sy.init_session(host=DO2)"
    ]
@@ -365,15 +365,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for client in do_clients:\n",
-    "    print(f\"sending job to {client.host}\")\n",
-    "    job = client.job.submit(\n",
-    "        name=\"fl-diabetes-prediction\",\n",
-    "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
-    "        dataset_name=SYFTBOX_DATASET_NAME,\n",
-    "        entrypoint=\"main.py\",\n",
-    "    )\n",
-    "    print(job)"
+    "print(f\"sending job to {do1_guest.host}\")\n",
+    "job = do1_guest.job.submit(\n",
+    "    name=\"fl-diabetes-prediction\",\n",
+    "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "print(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"sending job to {do2_guest.host}\")\n",
+    "job = do2_guest.job.submit(\n",
+    "    name=\"fl-diabetes-prediction\",\n",
+    "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "print(job)"
    ]
   },
   {
@@ -431,7 +446,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fl-diabetes-prediction-workspace",
+   "display_name": "fl-diabetes-prediction",
    "language": "python",
    "name": "python3"
   },
