--- a/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Outline of what DO1 will do\n",
     "\n",
-    "0. Run the `syftbox client` in a terminal (or the SyftBox UI app), and the `syft-rds server`\n",
+    "0. Run the `syftbox client` in a terminal (or the SyftBox UI app)\n",
     "1. DO logs into the datasite as an admin\n",
     "2. DO creates a Syft dataset \n",
     "3. DO reviews and run jobs submitted by data scientists on DO's private data"
