small updates to fl notebooks

--- a/notebooks/fl-diabetes-prediction/local/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do1.ipynb
@@ -134,6 +134,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do1.dataset.get_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset = do1.dataset.create(\n",
     "    name=\"pima-indians-diabetes-database\",\n",
     "    path=DATASET_PATH / \"private\",\n",
@@ -172,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do1.job.get_all(status=\"pending_code_review\")\n",
+    "jobs = do1.job.get_all()\n",
     "jobs"
    ]
   },
