--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -112,6 +112,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do2.dataset.get_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset = do2.dataset.create(\n",
     "    name=\"pima-indians-diabetes-database\",\n",
     "    path=DATASET_PATH / \"private\",\n",
