--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = False"
+    "RUN_SIMULATION = True"
    ]
   },
   {
@@ -358,15 +358,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for client in do_clients:\n",
-    "    print(f\"sending job to {client.host}\")\n",
-    "    job = client.job.submit(\n",
-    "        name=\"fl-diabetes-prediction\",\n",
-    "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
-    "        dataset_name=SYFTBOX_DATASET_NAME,\n",
-    "        entrypoint=\"main.py\",\n",
-    "    )\n",
-    "    print(job)"
+    "print(f\"sending job to {do1_guest.host}\")\n",
+    "job = do1_guest.job.submit(\n",
+    "    name=\"fl-diabetes-prediction\",\n",
+    "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "print(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"sending job to {do2_guest.host}\")\n",
+    "job2 = do2_guest.job.submit(\n",
+    "    name=\"fl-diabetes-prediction\",\n",
+    "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "print(job2)"
    ]
   },
   {
@@ -430,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fl-diabetes-prediction-workspace",
+   "display_name": "fl-diabetes-prediction",
    "language": "python",
    "name": "python3"
   },
