small updates for fl notebooks

--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do2.job.get_all(status=\"pending_code_review\")\n",
+    "jobs = do2.job.get_all()\n",
     "jobs"
    ]
   },
@@ -201,6 +201,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do2.job.approve(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "res_job = do2.run_private(job)"
    ]
   },
@@ -214,7 +223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fl-diabetes-prediction-workspace",
+   "display_name": "fl-diabetes-prediction",
    "language": "python",
    "name": "python3"
   },
