--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -358,14 +358,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"sending job to {do1_guest.host}\")\n",
+    "logger.info(f\"sending job to {do1_guest.host}\")\n",
     "job = do1_guest.job.submit(\n",
     "    name=\"fl-diabetes-prediction\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=SYFTBOX_DATASET_NAME,\n",
     "    entrypoint=\"main.py\",\n",
     ")\n",
-    "print(job)"
+    "logger.success(job)"
    ]
   },
   {
@@ -374,14 +374,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"sending job to {do2_guest.host}\")\n",
+    "logger.info(f\"sending job to {do2_guest.host}\")\n",
     "job2 = do2_guest.job.submit(\n",
     "    name=\"fl-diabetes-prediction\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=SYFTBOX_DATASET_NAME,\n",
     "    entrypoint=\"main.py\",\n",
     ")\n",
-    "print(job2)"
+    "logger.success(job2)"
    ]
   },
   {
