--- a/notebooks/fl-diabetes-prediction/local/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do1.ipynb
@@ -223,6 +223,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do1.job.approve(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "res_job = do1.run_private(job)"
    ]
   },
@@ -236,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fl-diabetes-prediction-workspace",
+   "display_name": "fl-diabetes-prediction",
    "language": "python",
    "name": "python3"
   },
