--- a/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "do1_email = Client.load().email\n",
     "logger.info(f\"DO1 email: {do1_email}\")\n",
-    "do1 = sy.init_session(host=do1_email, start_rds_server=True)"
+    "do1 = sy.init_session(host=do1_email)"
    ]
   },
   {
