--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -39,9 +39,6 @@
    "source": [
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
-    "\n",
-    "DS will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
-    "\n",
     "<img src=\"../images/dsLogsInAsGuests.png\" width=\"53%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
   },
@@ -60,8 +57,10 @@
     "\n",
     "DO1 = \"dkn.work@protonmail.com\"\n",
     "DO2 = \"dknguyen.work@gmail.com\"\n",
-    "do1_guest = sy.init_session(host=DO1)\n",
-    "do2_guest = sy.init_session(host=DO2)"
+    "\n",
+    "ds = sy.init_session(host=DS, email=DS, start_syft_event_server=False)\n",
+    "do1_client = sy.init_session(host=DO1, email=DS)\n",
+    "do2_client = sy.init_session(host=DO2, email=DS)"
    ]
   },
   {
@@ -70,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do1_guest.is_admin"
+    "do1_client.is_admin"
    ]
   },
   {
@@ -79,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do2_guest.is_admin"
+    "do2_client.is_admin"
    ]
   },
   {
@@ -102,7 +101,7 @@
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
     "\n",
-    "do_clients = [do1_guest, do2_guest]\n",
+    "do_clients = [do1_client, do2_client]\n",
     "do_emails = [DO1, DO2]"
    ]
   },
@@ -365,14 +364,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"sending job to {do1_guest.host}\")\n",
-    "job = do1_guest.job.submit(\n",
+    "logger.info(f\"sending job to {do1_client.host}\")\n",
+    "job = do1_client.job.submit(\n",
     "    name=\"fl-diabetes-prediction\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=SYFTBOX_DATASET_NAME,\n",
     "    entrypoint=\"main.py\",\n",
     ")\n",
-    "print(job)"
+    "logger.success(job)"
    ]
   },
   {
@@ -381,14 +380,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"sending job to {do2_guest.host}\")\n",
-    "job = do2_guest.job.submit(\n",
+    "logger.info(f\"sending job to {do2_client.host}\")\n",
+    "job = do2_client.job.submit(\n",
     "    name=\"fl-diabetes-prediction\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=SYFTBOX_DATASET_NAME,\n",
     "    entrypoint=\"main.py\",\n",
     ")\n",
-    "print(job)"
+    "logger.success(job)"
    ]
   },
   {
