--- a/notebooks/fl-diabetes-prediction/local/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Setup local syftbox network for local experimentations\n",
+    "## 0. Setup local syftbox network for local experimentations and logs in\n",
     "\n",
     "This will set up a local syftbox directory structures to test the whole flow locally under `./local_syftbox_network`, where eventually when all 3 clients have setup their datasites, it will look like below\n",
     "\n",
@@ -31,42 +31,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
+    "import syft_rds as sy\n",
     "\n",
-    "from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
-    "\n",
-    "remove_rds_stack_dir(root_dir=Path(\".\"), key=\"local_syftbox_network\")\n",
-    "\n",
-    "DO_EMAIL = \"do1@openmined.org\"\n",
-    "do_stack = setup_rds_server(\n",
-    "    email=DO_EMAIL, root_dir=Path(\".\"), key=\"local_syftbox_network\"\n",
-    ")\n",
-    "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)"
+    "DO_email = \"do1@openmined.org\"\n",
+    "do1 = sy.init_session(\n",
+    "    host=DO_email, email=DO_email, syftbox_dir=\"./local_syftbox_network\", reset=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. DO logs into the datasite as admin"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"../images/do1LogsInDatasite.png\" width=\"60%\" alt=\"DO1 logs into local datasite\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do1 = do_stack.init_session(host=DO_EMAIL)"
+    "<img src=\"../images/do1LogsInDatasite.png\" width=\"60%\" alt=\"DO1 logs into local datasite\">\n"
    ]
   },
   {
@@ -76,6 +53,17 @@
    "outputs": [],
    "source": [
     "do1.is_admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do1.syftbox_client.config_path)"
    ]
   },
   {
@@ -134,7 +122,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do1.dataset.get_all()"
+    "dataset = do1.dataset.create(\n",
+    "    name=\"pima-indians-diabetes-database\",\n",
+    "    path=DATASET_PATH / \"private\",\n",
+    "    mock_path=DATASET_PATH / \"mock\",\n",
+    "    description_path=DATASET_PATH / \"README.md\",\n",
+    ")\n",
+    "dataset.describe()"
    ]
   },
   {
@@ -143,13 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = do1.dataset.create(\n",
-    "    name=\"pima-indians-diabetes-database\",\n",
-    "    path=DATASET_PATH / \"private\",\n",
-    "    mock_path=DATASET_PATH / \"mock\",\n",
-    "    description_path=DATASET_PATH / \"README.md\",\n",
-    ")\n",
-    "dataset.describe()"
+    "do1.dataset.get_all()"
    ]
   },
   {
@@ -232,7 +220,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_job = do1.run_private(job)"
+    "res_job = do1.run_private(job, blocking=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1.job.get_logs(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1.job.show_logs(job)"
    ]
   },
   {
