--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -33,19 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
+    "import syft_rds as sy\n",
     "\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "DO_EMAIL = \"do2@openmined.org\"\n",
-    "do2_stack = setup_rds_server(\n",
-    "    email=DO_EMAIL, root_dir=Path(\".\"), key=\"local_syftbox_network\"\n",
-    ")\n",
-    "do2 = do2_stack.init_session(host=DO_EMAIL)\n",
-    "\n",
-    "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do2_stack.client.config_path)"
+    "DO_email = \"do2@openmined.org\"\n",
+    "do2 = sy.init_session(\n",
+    "    host=DO_email, email=DO_email, syftbox_dir=\"./local_syftbox_network\"\n",
+    ")"
    ]
   },
   {
@@ -55,6 +48,17 @@
    "outputs": [],
    "source": [
     "do2.is_admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do2.syftbox_client.config_path)"
    ]
   },
   {
@@ -112,7 +116,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do2.dataset.get_all()"
+    "dataset = do2.dataset.create(\n",
+    "    name=\"pima-indians-diabetes-database\",\n",
+    "    path=DATASET_PATH / \"private\",\n",
+    "    mock_path=DATASET_PATH / \"mock\",\n",
+    "    description_path=DATASET_PATH / \"README.md\",\n",
+    ")\n",
+    "dataset.describe()"
    ]
   },
   {
@@ -121,13 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = do2.dataset.create(\n",
-    "    name=\"pima-indians-diabetes-database\",\n",
-    "    path=DATASET_PATH / \"private\",\n",
-    "    mock_path=DATASET_PATH / \"mock\",\n",
-    "    description_path=DATASET_PATH / \"README.md\",\n",
-    ")\n",
-    "dataset.describe()"
+    "do2.dataset.get_all()"
    ]
   },
   {
@@ -210,7 +214,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_job = do2.run_private(job)"
+    "res_job = do2.run_private(job, blocking=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do2.job.get_logs(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do2.job.show_logs(job)"
    ]
   },
   {
