--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -24,9 +24,6 @@
    "source": [
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
-    "\n",
-    "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
-    "\n",
     "<img src=\"../images/dsLogsInAsGuests.png\" width=\"53%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
   },
@@ -36,19 +33,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from loguru import logger\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
+    "import syft_rds as sy\n",
     "\n",
     "DS = \"ds@openmined.org\"\n",
     "DO1 = \"do1@openmined.org\"\n",
     "DO2 = \"do2@openmined.org\"\n",
     "\n",
-    "ds_stack = setup_rds_server(email=DS, root_dir=Path(\".\"), key=\"local_syftbox_network\")\n",
-    "do1_guest = ds_stack.init_session(host=DO1)\n",
-    "do2_guest = ds_stack.init_session(host=DO2)"
+    "ds = sy.init_session(\n",
+    "    host=DS,\n",
+    "    email=DS,\n",
+    "    syftbox_dir=\"./local_syftbox_network\",\n",
+    "    start_syft_event_server=False,\n",
+    ")\n",
+    "do1_client = sy.init_session(host=DO1, email=DS, syftbox_dir=\"./local_syftbox_network\")\n",
+    "do2_client = sy.init_session(host=DO2, email=DS, syftbox_dir=\"./local_syftbox_network\")"
    ]
   },
   {
@@ -57,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = ds_stack.client"
+    "do1_client.is_admin"
    ]
   },
   {
@@ -66,16 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do1_guest.is_admin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do2_guest.is_admin"
+    "do2_client.is_admin"
    ]
   },
   {
@@ -91,13 +80,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
     "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds.syftbox_client.config_path)\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
-    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
+    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"120\"\n",
     "\n",
-    "do_clients = [do1_guest, do2_guest]\n",
+    "do_clients = [do1_client, do2_client]\n",
     "do_emails = [DO1, DO2]"
    ]
   },
@@ -143,6 +134,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from loguru import logger\n",
+    "\n",
     "try:\n",
     "    dataset.get_private_path()\n",
     "except Exception as e:\n",
@@ -196,6 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "SYFT_FLWR_PROJECT_PATH = Path(\"../fl-diabetes-prediction\")\n",
     "assert SYFT_FLWR_PROJECT_PATH.exists()"
    ]
@@ -264,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = True"
+    "RUN_SIMULATION = False"
    ]
   },
   {
@@ -358,8 +353,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info(f\"sending job to {do1_guest.host}\")\n",
-    "job = do1_guest.job.submit(\n",
+    "logger.info(f\"sending job to {do1_client.host}\")\n",
+    "job = do1_client.job.submit(\n",
     "    name=\"fl-diabetes-prediction\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=SYFTBOX_DATASET_NAME,\n",
@@ -374,8 +369,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info(f\"sending job to {do2_guest.host}\")\n",
-    "job2 = do2_guest.job.submit(\n",
+    "logger.info(f\"sending job to {do2_client.host}\")\n",
+    "job2 = do2_client.job.submit(\n",
     "    name=\"fl-diabetes-prediction\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=SYFTBOX_DATASET_NAME,\n",
