--- a/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "do2_email = Client.load().email\n",
     "logger.info(f\"DO2 email: {do2_email}\")\n",
-    "do2 = sy.init_session(host=do2_email, start_rds_server=True)"
+    "do2 = sy.init_session(host=do2_email)"
    ]
   },
   {
