--- a/notebooks/fl-diabetes-prediction/local/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do1.ipynb
@@ -34,8 +34,10 @@
     "import syft_rds as sy\n",
     "\n",
     "DO_email = \"do1@openmined.org\"\n",
+    "RESET = True  # set to True to reset the local syftbox network\n",
+    "\n",
     "do1 = sy.init_session(\n",
-    "    host=DO_email, email=DO_email, syftbox_dir=\"./local_syftbox_network\", reset=True\n",
+    "    host=DO_email, email=DO_email, syftbox_dir=\"./local_syftbox_network\", reset=RESET\n",
     ")"
    ]
   },
@@ -169,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do1.job.get_all()\n",
+    "jobs = do1.job.get_all(status=\"pending_code_review\")\n",
     "jobs"
    ]
   },
@@ -194,18 +196,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
-    "\n",
-    "<video width=\"90%\" controls>\n",
-    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
-    "  Your browser does not support the video tag.\n",
-    "</video>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -224,6 +214,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
+    "\n",
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -238,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do1.job.show_logs(job)"
+    "do1.job.show_logs(do1.job.get_all()[0])"
    ]
   },
   {
@@ -251,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fl-diabetes-prediction",
+   "display_name": "fl-diabetes-prediction-workspace",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
