--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do2.is_admin"
+    "do2.job.get_all()"
    ]
   },
   {
@@ -188,18 +188,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
-    "\n",
-    "<video width=\"90%\" controls>\n",
-    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
-    "  Your browser does not support the video tag.\n",
-    "</video>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -218,6 +206,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
+    "\n",
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -232,20 +232,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do2.job.show_logs(job)"
+    "do2.job.show_logs(do2.job.get_all()[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fl-diabetes-prediction",
+   "display_name": "fl-diabetes-prediction-workspace",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
