update distributed notebooks

--- a/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "do2_email = Client.load().email\n",
     "logger.info(f\"DO2 email: {do2_email}\")\n",
-    "do2 = sy.init_session(host=do2_email)"
+    "do2 = sy.init_session(host=do2_email, email=do2_email)"
    ]
   },
   {
@@ -201,6 +201,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do2.job.approve(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do2.run_private(job)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,15 +228,6 @@
     "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
     "  Your browser does not support the video tag.\n",
     "</video>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_job = do2.run_private(job)"
    ]
   },
   {
