--- a/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "do1_email = Client.load().email\n",
     "logger.info(f\"DO1 email: {do1_email}\")\n",
-    "do1 = sy.init_session(host=do1_email)"
+    "do1 = sy.init_session(host=do1_email, email=do1_email)"
    ]
   },
   {
@@ -202,6 +202,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1.job.approve(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_job = do1.run_private(job)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -218,21 +236,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "res_job = do1.run_private(job)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "fl-diabetes-prediction-workspace",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
