--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -448,7 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.run_private(job, blocking=False)"
+    "ds.run_private(job, blocking=True)"
    ]
   },
   {
@@ -465,6 +465,15 @@
    "outputs": [],
    "source": [
     "ds.job.show_logs(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.job.get_output_dir(job)"
    ]
   },
   {
