--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -254,6 +254,7 @@
     "\n",
     "try:\n",
     "    !rm -rf {SYFT_FLWR_PROJECT_PATH / \"main.py\"}\n",
+    "    logger.info(f\"syft_flwr version = {syft_flwr.__version__}\")\n",
     "    syft_flwr.bootstrap(SYFT_FLWR_PROJECT_PATH, aggregator=DS, datasites=do_emails)\n",
     "    logger.info(\"Bootstrapped project successfully ✅\")\n",
     "except Exception as e:\n",
@@ -432,15 +433,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.job.delete_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ds.job.approve(job)"
    ]
   },
@@ -456,6 +448,24 @@
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"120\"\n",
     "\n",
     "ds.run_private(ds.job.get_all()[0], blocking=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.job.show_logs(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.job.delete_all()"
    ]
   },
   {
@@ -485,6 +495,15 @@
     "\n",
     "\n",
     "<img src=\"../images/dsAggregatedWeights.png\" width=\"35%\" alt=\"DS weights\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.job.get_output_dir(job)"
    ]
   },
   {
