--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = False"
+    "RUN_SIMULATION = True"
    ]
   },
   {
