--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -11,12 +11,12 @@
     "0. DS runs the SyftBox client CLI tool or the SyftBox UI app\n",
     "1. DS logs into DO1 and DO2's datasites as guest  \n",
     "2. DS explores the datasets  \n",
-    "3. DS prepares syft_flwr code  \n",
-    "4. DS bootstraps the syft_flwr project  \n",
-    "5. DS runs flwr and syft_flwr simulations (optional)   \n",
+    "3. DS prepares `syft_flwr` code  \n",
+    "4. DS bootstraps the `syft_flwr` project  \n",
+    "5. DS runs `flwr` and `syft_flwr` simulations (optional)   \n",
     "6. DS submits jobs to the DOs' datasites  \n",
     "7. DS starts the FL server code  \n",
-    "8. DS Observes the Results"
+    "8. DS observes the results"
    ]
   },
   {
@@ -457,6 +457,15 @@
    "outputs": [],
    "source": [
     "ds.job.show_logs(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.job.get_output_dir(job)"
    ]
   },
   {
