small notebooks update

--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -65,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO1 = \"dkn.work@protonmail.com\"\n",
-    "DO2 = \"dknguyen.work@gmail.com\"\n",
+    "DO1 = \"do1_email@example.com\"\n",
+    "DO2 = \"do2_email@example.com\"\n",
     "\n",
     "do1_client = sy.init_session(host=DO1, email=DS)\n",
     "do2_client = sy.init_session(host=DO2, email=DS)"
