--- a/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
@@ -58,8 +58,8 @@
     "DS = Client.load().email\n",
     "logger.info(f\"DS's email: {DS}\")\n",
     "\n",
-    "DO1 = \"<do1_email>\"\n",
-    "DO2 = \"<do2_email>\"\n",
+    "DO1 = \"do1_email@example.com\"\n",
+    "DO2 = \"do2_email@example.com\"\n",
     "do1_guest = sy.init_session(host=DO1)\n",
     "do2_guest = sy.init_session(host=DO2)"
    ]
